Default table row values
- set default observation value to zero
- set start point name, if group is set of directions